Fixed navlogo break at 600px screen width

--- a/src/index.css
+++ b/src/index.css
@@ -575,7 +575,22 @@ nav{
 }
 
 @media (max-width: 600px){
+
+    #nav-logo span{
+        display: none;
+    }
     
+    #nav-logo img{
+        top: 5px;
+        width: 75px;
+        height: 75px;
+    }
+
+    #burger{
+        width: 2.8rem;
+        height: 2.8rem;
+    }
+
     .sec1{
         max-height: 120vh;
         background-position: 0 90%;
@@ -620,183 +635,6 @@ nav{
 }
 
 /*
-
-.sec1-wrapper{
-    display: flex;
-    width: 100%;
-    padding: 0 10rem;
-    border: 1px solid black;
-}
-
-.sec1-left{
-    display: flex;
-    width: 50%;
-    height: auto;
-    flex-direction: column;
-    justify-content: center;
-    border: 1px solid blue;
-}
-
-.sec1-left h1{
-    position: relative;
-    font-family: 'Lalezar', 'serif';
-    font-size: 4em;
-    font-weight: 500;
-    line-height: 1;
-    bottom: 4%;
-}
-
-.sec1-left h4{
-    font-family: 'Abel', 'serif';
-    font-size: 25px;
-    font-weight: 400;
-}
-
-.sec1-left button{
-    display: flex;
-    background-color: #442F2F;
-    color: white;
-    width: 210px;
-    height: 63px;
-    border-radius: 30px;
-    margin-top: 40px;
-    font-size: 26px;
-    font-family: 'Lalezar', 'serif';
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-}
-.sec1-left button svg{
-    margin-left: 8px;
-    margin-bottom: 4px;
-}
-
-.sec1-left button:hover{
-    position: relative;
-    background-color: #634c4c;
-    top: 1px;
-}
-
-.sec1-right{
-    display: flex;
-    width: 50%;
-    justify-content: center;
-    position: relative;
-    border: 1px solid red;
-}
-
-#brownie{
-    display: none;
-    position: relative;
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
-    max-width: 436px;
-    max-height: 420px;
-    border: 1px solid blue;
-}
-
-#coffee{
-    display: none;
-    position: relative;
-    max-width: 447.83px;
-    max-height: 349.09px;
-    border: 1px solid red;
-}
-
-.sec2{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-width: 100%;
-    min-height: 800px;
-    padding: 0 10rem;
-    bottom: 80px;
-    border: 1px solid red;
-}
-
-.sec2 h2{
-    font-family: 'Lalezar', 'serif';
-    font-size: 50px;
-    text-align: center;
-    letter-spacing: 1px;
-}
-
-.sec2 h5{
-    font-family: 'Abel', 'serif';
-    font-weight: lighter;
-    text-align: center;
-    font-size: 20px;
-    width: 40rem;
-    line-height: 1.4;
-    margin-top: 15px;
-}
-
-.sec2 button{
-    width: 210px;
-    height: 63px;
-    background-color: white;
-    border-style: solid;
-    border-width: 3px;
-    border-radius: 30px;
-    border-color: #3a2c2c;
-    font-family: 'Lalezar', 'serif';
-    font-size: 26px;
-    margin-top: 40px;
-    cursor: pointer;
-}
-
-.sec2 button:hover{
-    background-color: #3a2c2c;
-    color: white;
-    position: relative;
-    top: 2px;
-}
-
-.foods{
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: row;
-    max-width: 100%;
-    height: 300px;
-    top: 30px;
-    border: 1px solid orange;
-}
-
-.foods > * {
-    max-width: 100%;
-    flex: 1;
-}
-
-.food-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    max-width: 70%;
-    max-height: 100%;
-}
-
-#matcha{
-    position: relative;
-    width: 20rem;
-    height: 29rem;
-    bottom: 24px;
-}
-
-#pie{
-    position: relative;
-    width: 20rem;
-    height: 20rem;
-    left: 1rem;
-
-}
-
-#donut{
-    width: 21rem;
-    height: 18rem;
-}
 
 .sec3{
     display: flex;
